--- a/login.html
+++ b/login.html
@@ -66,14 +66,14 @@
         <!-- 第二行 -->
         <div class="layui-form-item">
           <i class="layui-icon layui-icon-password"></i>
-          <input type="password" name="password" required lay-verify="required|pwd" placeholder="请输入密码" autocomplete="off"
-            class="layui-input">
+          <input type="password" name="password" required lay-verify="required|pwd" placeholder="请输入密码"
+            autocomplete="off" class="layui-input">
         </div>
         <!-- 第三行 -->
         <div class="layui-form-item">
           <i class="layui-icon layui-icon-password"></i>
-          <input type="password" name="repassword" required lay-verify="required|pwd|samePwd" placeholder="请确认密码" autocomplete="off"
-            class="layui-input">
+          <input type="password" name="repassword" required lay-verify="required|pwd|samePwd" placeholder="请确认密码"
+            autocomplete="off" class="layui-input">
         </div>
         <!-- 第4行 -->
         <div class="layui-form-item">
