--- a/login.html
+++ b/login.html
@@ -91,6 +91,8 @@
   <script src="assets/lib/layui/layui.all.js"></script>
   <!-- 一定要在页面的最底部，导入所有的 script 脚本 -->
   <script src="assets/lib/jquery.js"></script>
+  <!-- 导入baseAPI.js ,在自己的js之前，jQuery文件之后 -->
+  <script src="assets/js/baseAPI.js"></script>
   <!-- 导入自己的 js -->
   <script src="assets/js/login.js"></script>
 </body>
