个人信息模块完成

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <div class="layui-side-scroll">
         <!-- 左侧导航区域（可配合layui已有的垂直导航） -->
         <!-- 侧边栏的头像和欢迎区域 -->
-        <!-- 阿凡达 --> 
+        <!-- 阿凡达 -->
         <div class="avatar-container">
           <img src="http://t.cn/RCzsdCq" class="layui-nav-img">
           <span class="text-avatar">A</span>
@@ -63,9 +63,9 @@
           <li class="layui-nav-item">
             <a href="javascript:;"><span class="iconfont icon-user"></span>个人中心</a>
             <dl class="layui-nav-child">
-              <dd><a href="javascript:;"><i class="layui-icon layui-icon-app"></i> 基本资料</a></dd>
-              <dd><a href="javascript:;"><i class="layui-icon layui-icon-app"></i> 更换头像</a></dd>
-              <dd><a href="javascript:;"><i class="layui-icon layui-icon-app"></i> 修改密码</a></dd>
+              <dd><a href="user/user_info.html" target="fm"> <i class="layui-icon layui-icon-app"></i> 基本资料</a></dd>
+              <dd><a href="user/user_avatar.html" target="fm"><i class="layui-icon layui-icon-app"></i> 更换头像</a></dd>
+              <dd><a href="user/user_psd.html" target='fm'><i class="layui-icon layui-icon-app"></i> 修改密码</a></dd>
             </dl>
           </li>
         </ul>
